--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "auth0TestBack",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3"
   }
 }
